--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "react-icons": "^4.12.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
